[tool.poetry]
name = "synr"
version = "0.2.1"
description = "A consistent AST for Python"
authors = ["Jared Roesch <jroesch@octoml.ai>", "Tristan Konolige <tkonolige@octoml.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.6"
attrs = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = { version = "^20.0", allow-prereleases = true }
mypy = "^0.782"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
